After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 797353 - overlaycomposition: Fix implicit use of memset
overlaycomposition: Fix implicit use of memset
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.15.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-10-29 09:11 UTC by Johan Bjäreholt
Modified: 2018-10-29 13:13 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
0001-gstoverlaycomposition-Fix-implicit-use-of-memset.patch (763 bytes, patch)
2018-10-29 09:11 UTC, Johan Bjäreholt
committed Details | Review

Description Johan Bjäreholt 2018-10-29 09:11:57 UTC
Created attachment 374099 [details] [review]
0001-gstoverlaycomposition-Fix-implicit-use-of-memset.patch

Fixes compilation when setting compiler to treat warnings as errors.
Comment 1 Sebastian Dröge (slomo) 2018-10-29 13:13:37 UTC
commit f780c718e7750e6c4db65806c47184c218830548 (HEAD -> master)
Author: Johan Bjäreholt <johanbj@axis.com>
Date:   Mon Oct 29 09:18:35 2018 +0100

    overlaycomposition: Fix implicit use of memset
    
    https://bugzilla.gnome.org/show_bug.cgi?id=797353