overlaycomposition: Fix implicit use of memset

https://bugzilla.gnome.org/show_bug.cgi?id=797353